# TADashboard

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  grants.sql  init-db.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260417_0001_initial_schema.py  20260417_0002_followup_sessions_role_enum_audit_index.py
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/admin/: __init__.py  bootstrap.py  routes.py  schemas.py
backend/app/audit/: __init__.py  actions.py  erasure.py  sweep.py  writer.py
backend/app/auth/: __init__.py  cookies.py  csrf.py  deps.py  oauth.py  routes.py  sessions.py
backend/app/authz/: __init__.py  hub_scope.py  roles.py
backend/app/comments/: routes.py  schemas.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/e2e/: routes.py
backend/app/report/: __init__.py  db.py  logic.py  models.py  pdf.py  routes.py
backend/app/sheets/: __init__.py  cache.py  client.py  column_mapping.py  models.py
backend/app/utils/: __init__.py  http.py
backend/tests/: conftest.py
backend/tests/fixtures/: __init__.py  seed_2025.py  sheets_fixtures.py
backend/tests/integration/: test_admin_config.py  test_admin_guard.py  test_admin_revoke_sessions.py  test_admin_users.py  test_alembic.py  test_audit_erasure.py  test_audit_writer.py  test_auth_session.py  test_bootstrap_admin.py  test_comments.py  test_cookie_flags.py  test_csrf.py  test_db_role_grants.py  test_deactivation_erasure.py  test_e2e_endpoint_guard.py  test_grants.py  test_hub_scope_guard.py  test_logging_redaction.py  test_logging_shape.py  test_oauth_callback.py  test_pdf_export.py  test_placeholder.py  test_report_api.py  test_report_refresh_audit.py  (+3 more)
(+85 files in other folders)
