[project]
name = "ta-hiring-report-backend"
version = "0.0.1"
description = "Symphony TA Hiring Report Platform - backend"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Aida Jugo Krstulovic" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "gspread>=6.1",
    "google-auth>=2.35",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-json-logger>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.10",
    "mypy>=1.11",
    "types-requests",
    "httpx>=0.27",
    "pip-audit>=2.7",
    "pytest-alembic>=0.12.1",
    "respx>=0.23.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "RET", "SIM", "TCH", "PL"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PL"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["gspread.*", "google.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, isolated tests",
    "integration: DB + external boundaries",
]
